0MQ version 4.0.4 stable, released on 2014/xx/xx
================================================

Bug Fixes
---------

* Fixed #888; hangs on terminate when inproc connected but never bound.

* Fixed #868; assertion failure at ip.cpp:137 when using port scanner.

* Fixed #818; fix timestamp counter on s390/s390x.

* Fixed #817; only export zmq_* symbols.

* Fixed #797; fixed setting TCP keepalive on Windows.

* Fixed #775; compile error on Windows.

* Fixed #763; when talking to a ZMTP v1 peer (libzmq 2.2), a socket would
  send an extra identity frame at the start of the connection.

* Fixed LIBZMQ-576 - Crash closing a socket after zmq_msg_send returns
  EAGAIN (reverts LIBZMQ-497)

* Fixed LIBZMQ-584; subscription filters getting lost on reconnection.


0MQ version 4.0.3 stable, released on 2013/11/24
================================================

Bug Fixes
---------

* Fixed test_many_sockets case, which failed when process socket limit
  was 1024.


0MQ version 4.0.2 stable, released on 2013/11/24
================================================

Bug Fixes
---------

* Fixed LIBZMQ-583 - improved low-res timer for Windows 
* Fixed LIBZMQ-578 - z85_decode was extremely slow
* Fixed LIBZMQ-577 - fault in man pages.
* Fixed LIBZMQ-574 - assertion failure when ran out of system file handles
* Fixed LIBZMQ-571 - test_stream failing in some cases
* Fixed LIBZMQ-569 - Socket server crashes with random client data and when
  talking to 2.2 versions
* Fixed LIBZMQ-39 - Bad file descriptor during shutdown
* Pulled expected failing test_linger.cpp from release
* Reduced pause time in tests to allow "make check" to run faster


0MQ version 4.0.1 stable, released on 2013/10/08
================================================

Changes
-------

* Updated CURVE mechanism to track revised RFC 27 (INITIATE vouch).

  The INITIATE command vouch box is Box[C',S](C->S') instead of
  Box[C'](C->S), to reduce the risk of client impersonation, as per