@@ -4,6 +4,8 @@
 Bug Fixes
 ---------
 
+* Fixed #909; out of tree build issue on Linux.
+
 * Fixed #888; hangs on terminate when inproc connected but never bound.
 
 * Fixed #868; assertion failure at ip.cpp:137 when using port scanner.
